--- a/class-activity-6.Rmd
+++ b/class-activity-6.Rmd
@@ -80,3 +80,90 @@ f
 
 # Can you group students according to their weekly activities?
 
+```{r}
+install.packages("factoextra")
+install.packages("cluster")
+install.packages("magrittr")
+library("cluster")
+library("factoextra")
+library("magrittr")
+stu <- DF1[-c(1,2), 20:26]
+stu[] <- lapply(stu, as.numeric)
+
+# for computing a distance matrix between the rows of a data matrix. 
+# Compared to the standard dist() function, 
+# it supports correlation-based distance measures including “pearson”, “kendall” and “spearman” methods.
+res.dist <- get_dist(stu, stand = TRUE, method = "pearson")
+
+# for visualizing a distance matrix
+fviz_dist(res.dist, 
+   gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
+
+
+res.dist2 <- get_dist(df_ll, stand = TRUE, method = "pearson")
+fviz_dist(res.dist2, 
+   gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
+
+```
+
+```{r}
+fviz_nbclust(stu, kmeans, method = "gap_stat")
+
+fviz_nbclust(df_ll, kmeans, method = "gap_stat")
+```
+```{r}
+my_data <- stu
+my_data <- df_ll
+
+set.seed(123)
+km.res <- kmeans(my_data, 3, nstart = 25)
+# Visualize
+library("factoextra")
+fviz_cluster(km.res, data = my_data,
+             ellipse.type = "convex",
+             palette = "jco",
+             ggtheme = theme_minimal())
+```
+
+```{r}
+# Compute hierarchical clustering
+res.hc <- stu %>%
+  scale() %>%                    # Scale the data
+  dist(method = "euclidean") %>% # Compute dissimilarity matrix
+  hclust(method = "ward.D2")     # Compute hierachical clustering
+# Visualize using factoextra
+# Cut in 4 groups and color by groups
+fviz_dend(res.hc, k = 4, # Cut in four groups
+          cex = 0.5, # label size
+          k_colors = c("#2E9FDF", "#00AFBB", "#E7B800", "#FC4E07"),
+          color_labels_by_k = TRUE, # color labels by groups
+          rect = TRUE # Add rectangle around groups
+          )
+```
+
+```{r}
+gradient.color <- list(low = "steelblue",  high = "white")
+stu %>%    # Remove column 5 (Species)
+  scale() %>%     # Scale variables
+  get_clust_tendency(n = 40, gradient = gradient.color)
+```
+
+```{r}
+set.seed(123)
+# Compute
+install.packages("NbClust")
+library("NbClust")
+```
+
+```{r}
+res.nbclust <- stu %>%
+  scale() %>%
+  NbClust(distance = "euclidean",
+          min.nc = 2, max.nc = 10, 
+          method = "complete", index ="all") 
+
+# Visualize
+library(factoextra)
+fviz_nbclust(res.nbclust, ggtheme = theme_minimal())
+```
+
